[gd_scene load_steps=4 format=3 uid="uid://dbw5bq7rhf058"]

[ext_resource type="Script" uid="uid://yomi4avh4m24" path="res://MainMenu/menu.gd" id="1_nuv2b"]
[ext_resource type="PackedScene" uid="uid://c2wygt7dj35rl" path="res://Options/options.tscn" id="2_jefjr"]

[sub_resource type="Theme" id="Theme_h4nae"]
default_font_size = 40

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_vertical = 4
script = ExtResource("1_nuv2b")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.202
offset_top = 5.0
offset_right = 70.0
offset_bottom = 113.0
pivot_offset = Vector2(-3, -5)

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_h4nae")
text = "Harvest 306:"

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Start"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Quit"

[node name="Options" parent="." instance=ExtResource("2_jefjr")]
process_mode = 0
visible = false
layout_mode = 1

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="option_toggle"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
